--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
     position: sticky;
     top:0;
     left: 0;
-    height: 70px;
+    height: 80px;
 }
 
 .header, a{
@@ -54,9 +54,10 @@
 }
 
 .logo{
-    width: 105px;
+    width: 120px;
      height: 25px;
 }
+
 
 /* Add this to your stylesheet */
 .logoName:hover {
@@ -289,6 +290,7 @@ color: #088178;
 .product-set{
     display: flex;
 }
+
 .product-container {
     display: flex;
     overflow-x: auto;
@@ -523,6 +525,7 @@ footer {
 #cartPage .cart-button {
     margin-left: 0px;
     margin-bottom: 10px;
+    height: 32px;
 }
 
   .cartItem .quantity-controls {
@@ -541,6 +544,11 @@ footer {
   .cartItem .quantity-controls .quantity-input {
     width: 40px;
 }
+
+   #cartItems{
+     padding-left: 16px;
+   }
+
   .delete-icon{
     padding-left: 20px;
     cursor: pointer;
@@ -672,7 +680,7 @@ footer {
 }
 
 .categories{
-    padding: 20px 30px;
+    padding: 20px 00px;
 }
 
 .center{
@@ -1261,7 +1269,7 @@ footer a:hover {
 
  #mobile i {
    color: #1a1a1a;
-   font-size: 24px;
+   font-size: 40px;
    padding-left: 20px;
  }
 
@@ -1751,8 +1759,13 @@ footer {
     padding: 20px 10px;
 }
 footer{
-    padding: 2px 5px;
+    padding: 2px 15px;
     justify-content: space-between;
+    display: flex;
+    /* align-items: center; */
+  flex-direction: column;
+  min-height: 100vh; /* This ensures the body takes at least the full height of the viewport */
+  /* margin: 0; */
 }
 
 .movedarkmode {
@@ -2259,12 +2272,16 @@ justify-content: center;
 .jewelry-image {
     border-radius: 12px;
     height: fit-content;
-    margin-left: 63px;
+    margin-left: 123px;
 }
 
 .shopShoe {
     display: block;
     padding: 20px 30px;
+}
+
+#down li a{
+    padding-top: 222px;
 }
 
 #down {
@@ -2300,6 +2317,179 @@ justify-content: center;
         /* Add more styles for smaller screens as needed */
       }
 
+      /* for a half of a laptop screen */
+@media only screen and (max-width: 683px) {
+  /* Styles for approximately half of a laptop screen */
+  .circular-image {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.first-category, .second-category {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 0px;
+}
+
+#cartCountMobile {
+    /* background-color: #088178; */
+    color: red;
+    padding-left: 5px;
+    /* width: 300px; */
+}
+
+ #navbar {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          justify-content: flex-start;
+          position: fixed;
+          top: 0;
+          right: -1000px;
+          height: 127.90vh;
+          /* width: 270px; */
+          width: 100%;
+          background-color: #83adab ;
+          box-shadow: 5px 5px 10px #888888;
+          padding: 80px 0 0 10px;
+          transition: 0.5s;
+          border-radius: 5px;
+          margin-top: 0px;
+          padding-left: 0px;
+       }
+
+
+       .hiddenLink{
+        display: none;
+       }
+       
+       .cartLink{
+        padding-left: 30px;
+       }
+
+    /* #down{
+        padding: 90px 0px !important;
+    } */
+
+       #navbar.active {
+        right: -50px;
+    }
+    
+       #navbar li{
+          margin-bottom: 30px;      
+       }
+    
+       #mobile{
+          display: flex;
+          align-items: center;
+          margin-right: 10px;
+       }
+       
+       #mobile:hover{
+        cursor: pointer;
+       }
+
+       #mobile i {
+         color: #1a1a1a;
+         font-size: 24px;
+         padding-left: 20px;
+       }
+        
+        #close {
+            display: block;
+            position: absolute;
+            top: 30px;
+            color: #222;
+            font-size: 24px;
+            /* padding-left: 230px; */
+            padding-left: 0px;
+        }
+        /* padding-left:0px */
+        /* display: initial; */
+     
+        .randomImages {
+            display: block;
+            padding: 20px 10px;
+        }
+
+        .slideshow-container img {
+        width: 100%;
+        max-height: 200px;
+        object-fit: cover;
+        border-radius: 15px;
+}
+
+.text-content {
+    width: 100%;
+    padding: 0px;
+    padding-left: 0px;
+    text-align: center;
+}
+
+.sub-categories-container {
+    position: absolute;
+    display: block;
+    /* padding-top: 2px; */
+}
+
+
+
+/* Style for the dropdown content (hidden by default) */
+.sub-categories {
+    display: flex;
+    position: none;
+    background-color: none; /* White background */
+    box-shadow: none; /* Box shadow for a subtle effect */
+    z-index: none; 
+    width: 0px;
+    border-radius: 0px;
+    margin-left: 20px;
+    /* margin-left: 0px; */
+    padding-bottom: 10px;
+    margin-top: 170px;
+}
+
+.sub-categories a {
+    color: #333 !important;  /* Text color */
+    /* padding: 4px; */
+    display: block;
+    text-decoration: none;
+    margin-left: -6px;
+    padding-top: 15px;
+}
+
+/* Change color on hover for the dropdown links */
+.sub-categories a:hover {
+    color: #5d7a7a !important;
+    transform: scale(1.2);
+    /* content: none !important; */
+   /* Light gray background on hover */
+}
+
+/* Show the dropdown content when hovering over the dropdown link */
+.sub-categories-container:hover .sub-categories {
+    display: none !important;
+}
+
+.shiftDown{
+    /* margin: 10px 0px; */
+    padding-left: 30px;
+}
+
+#down{
+    margin-top: 180px !important ;
+    display: flex;
+    justify-content: space-around;
+}
+
+
+  /* Add more styles as needed for your specific elements */
+}
 
       
 
@@ -2319,6 +2509,41 @@ justify-content: center;
         padding-top: 20px;
     }
 
-    /* for iphone5/se */
+    /* galaxy fold */
+    /* Media query for Samsung Galaxy Fold screen size */
+@media only screen and (max-width: 840px) {
+    #header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 20px 5px;
+        background: #E3E6F3;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+        z-index: 999;
+        position: sticky;
+        top: 0;
+        left: 0;
+        height: 70px;
+    }
 
-   
+    .logo{
+        width: 160px;
+        height: 25px;
+    }
+
+    #cartItems {
+        padding-left: 0px;
+    }
+
+    #cartPage {
+        padding: 20px 0px;
+    }
+
+}
+
+/* nest hub */
+@media only screen and (max-width: 1024px) and (max-height: 600px) {
+    /* Add your styles for Nest Hub screen size here */
+
+    /* Add any other styles you want to modify for Nest Hub here */
+}
